[tool.poetry]
name = "gumbotchi"
version = "3.2.1"
description = "Discord Bot"
authors = ["Gumbachi <jaredremsberg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
py-cord = { version = "^2.4.1", extras = ["voice"] }
pymongo = { version = "^4.3.3", extras = ["srv"] }
yt-dlp = "^2023.10.13"
python-dotenv = "^1.0.0"
pandas = "^2.2.1"
matplotlib = "^3.8.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.260"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
